# frontend-agent

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
training/: README.md  SCENARIOS.md  pyproject.toml  requirements-image.txt
training/configs/: 230m-16gb-full.yaml  350m-16gb-full.yaml  lora-generic.yaml  qlora-8gb.yaml
training/docs/: llm-eval-notes.md
training/kbft/: gbnf.py  generic_gen.py  gguf_runtime.py  holdout.py  reframe.py  render.py  retriever.py  schema.py  session_sim.py  synth.py  teacher.py  tiered.py  toolcall.py  tools.py  train_config.py  turns.py
training/publish/: model_card.md
training/reports/: METRICS.md  eval_350m_champ.json  eval_350m_grd.json  eval_350m_mt10m.json  eval_350m_mt20m.json  eval_350m_mt30m.json  eval_350m_mt40m.json  eval_350m_pol.json  eval_350m_pol1ep.json  eval_350m_pol_haggle.json  eval_350m_sku.json  eval_350m_sku2.json  eval_350m_skuref.json  eval_40m.json  eval_ab1mt.json  eval_aggtools.json  eval_champion_reeval.json  eval_col.json  eval_fl.json  eval_fl_rebaseline.json  eval_flbig.json  eval_i1r.json  eval_iter1.json  eval_iter2.json  eval_iter3.json  eval_iter3col.json  eval_iter4.json  eval_judged_cmp.json  eval_judged_cmp_traj_350m-Q6_K.jsonl  eval_leanrefuse.json  eval_leanrefuse_s11.json  eval_lessff.json  eval_lessff_s11.json  eval_nat_vs_champ.json  eval_quant_compare.json  eval_soup13.json  eval_soup134.json  report_quant_compare.md
training/scripts/: bench_student.py  bench_teacher.py  bootstrap.sh  build_packs.py  build_release_40m.py  build_release_multiturn.py  eval_generic.py  (+14 more)
(+149 files in other folders)
