[project]
name = "frontend-agent-training"
version = "1.0.0"
description = "Compositional SFT pipeline for a generic edge web-agent on LFM2.5-230M"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "diskcache>=5.6.3",
    "huggingface-hub>=0.35",
    "instructor>=1.15.4",
    "openai>=2.45.0",
    "peft>=0.17",
    "pydantic-settings>=2.14.2",
    "python-frontmatter>=1.3.0",
    "torch>=2.12.1",
    "transformers>=5.13.0",
    "trl>=0.24",
]
